syntax = "proto3";

option go_package = "/pb";

package api;


service AccessControlManager {
    rpc AddUser (AddUserRequest) returns (AddUserResponse);
    rpc DeleteUserByChipCardId (DeleteUserByChipCardIdRequest) returns (DeleteUserByChipCardIdResponse);
    rpc CheckAccess (CheckAccessRequest) returns (CheckAccessResponse);
    // Door
    rpc AddDoor (AddDoorRequest) returns (AddDoorResponse);
    rpc RemoveDoor (RemoveDoorRequest) returns (RemoveDoorResponse);
}

enum AccessLevel {
    NO_ACCESS = 0;
    LEVEL_1 = 1;
    LEVEL_2 = 2;
    ADMIN = 3;
}

message AddDoorRequest {
    AccessLevel requiredAccessLevel = 1;
}
message AddDoorResponse {
    string id = 1;
}

message RemoveDoorRequest {
    string id = 1;
}
message RemoveDoorResponse {}

message AddUserRequest {
    string name = 1;
    string chipCardId = 2;
    AccessLevel AccessRights = 3;
}

message AddUserResponse {}

message CheckAccessRequest {
    string chipCardId = 1;
    int32 doorId = 2;
}

message CheckAccessResponse {
    bool hasAccess = 1;
}

message DeleteUserByChipCardIdRequest {
    string chipCardId = 1;
}

message DeleteUserByChipCardIdResponse {
}
